--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseValidation.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseValidation.cshtml
@@ -2,6 +2,7 @@
 @using DH.Helpdesk.BusinessData.OldComponents
 @using DH.Helpdesk.Common.Enums
 @using DH.Helpdesk.Common.Enums.Settings
+@using DH.Helpdesk.Common.Extensions.Boolean
 
 <script type="text/javascript">
     window.parameters = {
