--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/app.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/app.component.html
@@ -1,7 +1,12 @@
 <mbsc-page [options]="pageSettings">  
-    <div *requireAuth>
+    <div *requireAuth class="stickyTop">
         <app-header></app-header>
     </div>
-  <router-outlet></router-outlet>
- <!--  <app-footer></app-footer> TODO: stick to bottom -->
+    <div class="content">
+        <router-outlet></router-outlet>
+    </div>
 </mbsc-page>
+<!-- <div class="footer">
+    <app-footer></app-footer>
+</div>
+ -->
