Added dhdev configuration

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/textbox/case-textbox-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/textbox/case-textbox-control.component.html
@@ -1,5 +1,5 @@
 <ng-container [formGroup]="form">
-    <mbsc-input [formControlName]="field.name" label-style="stacked" [disabled]="options.disabled">{{field.label}}</mbsc-input> 
+    <mbsc-input [formControlName]="field.name" [disabled]="options.disabled">{{field.label}}</mbsc-input> 
 <!--
     <label>
         {{field.Label}}
