--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/header/page-header.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/header/page-header.component.html
@@ -1,11 +1,11 @@
 <div>
     <div class="md-hamb mbsc-padding">
-        <mbsc-hamburger-nav [options]="iconMenu" [options]="hamburgerSettings">
-            <mbsc-nav-item data-icon="newspaper" (click)="sendTestRequest()">Send test request</mbsc-nav-item>
+        <mbsc-hamburger-nav [options]="hamburgerSettings">
+<!--             <mbsc-nav-item data-icon="newspaper" (click)="sendTestRequest()">Send test request</mbsc-nav-item>
             <mbsc-nav-item data-icon="bubble">Messages</mbsc-nav-item>
             <mbsc-nav-item data-icon="fa-globe">Notifications</mbsc-nav-item>
             <mbsc-nav-item data-icon="line-settings">Profile</mbsc-nav-item>
-            <mbsc-nav-item data-icon="fa-power-off"><a [routerLink]="['/login']">Logout</a></mbsc-nav-item>
+ -->            <mbsc-nav-item data-icon="fa-power-off"><a [routerLink]="['/login']">Logout</a></mbsc-nav-item>
         </mbsc-hamburger-nav>
     </div>
     <div class="md-hamb">
