--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/cases-overview/cases-overview.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/cases-overview/cases-overview.component.html
@@ -7,7 +7,7 @@
                                         <div class="mbsc-col">
                                                 <mbsc-input formControlName="freeSearch"  placeholder="Search"></mbsc-input>
                                         </div>
-                                        <div class="mbsc-col-sm-auto">
+                                        <div class="mbsc-col-sm-auto md-load-btn">
                                                 <mbsc-button icon="material-search" [hidden]="isLoading" (click)="applyFilterAndSearch()"></mbsc-button>
                                                 <mbsc-button flat block icon="loop2" [hidden]="!isLoading"></mbsc-button>                                
                                         </div>
@@ -17,10 +17,11 @@
         </div>
 </mbsc-form>
 <div class="stickToBottom">
-        <mbsc-listview [options]="listviewSettings" [hidden]="isLoading" (onItemTap)="onItemTap($event)" (touchmove)="checkLoad()">
-                <mbsc-listview-item *ngFor="let case of cases" >
-                        #{{case.columns | getByKey: 'CaseNumber'}}
-                        <div>{{case.columns | getByKey: 'RegTime'}}</div> <!-- TODO: use ISO date instead of string and format -->   
+        <mbsc-listview #listview [options]="listviewSettings" [hidden]="isLoading" (onItemTap)="onItemTap($event)" (touchmove)="checkLoad()">
+                <mbsc-listview-item *ngFor="let case of cases; trackBy: trackByFn" >
+                        #{{(case.columns | getByKey: 'CaseNumber') || '&nbsp;'}}
+                        <div>{{(case.columns | getByKey: 'RegTime') || '&nbsp;'}}</div> <!-- TODO: use ISO date instead of string and format -->   
+                        <div>{{(case.columns | getByKey: 'Caption') || '&nbsp;'}}</div>
                 </mbsc-listview-item>
         </mbsc-listview>
         <mbsc-form #loading class="mbsc-padding md-load-btn md-btn-isLoading" style="display: block">
