added version on ui optimezed icons

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/header/page-header.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/header/page-header.component.html
@@ -5,7 +5,7 @@
             <mbsc-nav-item data-icon="bubble">Messages</mbsc-nav-item>
             <mbsc-nav-item data-icon="fa-globe">Notifications</mbsc-nav-item>
             <mbsc-nav-item data-icon="line-settings">Profile</mbsc-nav-item>
- -->            <mbsc-nav-item data-icon="fa-power-off"><a [routerLink]="['/login']">Logout</a></mbsc-nav-item>
+ -->            <mbsc-nav-item data-icon="ion-ios7-close-outline"><a [routerLink]="['/login']">Logout</a></mbsc-nav-item>
         </mbsc-hamburger-nav>
     </div>
     <div class="md-hamb">
