--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
@@ -16,6 +16,12 @@
     font-size: .75em;
     color: #6d6d6d;
 } */
+
+
+/* .mbsc-ic.icon:before {
+    font-family: fontawesome !important; 
+} */
+
 @keyframes md-rotating {
     from {
         transform: rotate(0deg);
