Added Language change. added version support for api. minor fixes and optimizations

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
@@ -19,7 +19,7 @@
 
 
 /* .mbsc-ic.icon:before {
-    font-family: fontawesome !important; 
+    font-family: "Font Awesome 5 Free" !important; 
 } */
 
 @keyframes md-rotating {
